Metadata improved. Added new Exception classes. parser method of other nodes apart from Metadata added. New testcases.